# GCD-TFG-app

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pull_models.sh
backend/: Dockerfile  entrypoint.sh  langgraph.json  pyproject.toml
backend/api/: app.py  config.py  extensions.py
backend/api/blueprints/health/: __init__.py  routes.py
backend/api/blueprints/quote/: __init__.py  routes.py
backend/api/blueprints/stream/: __init__.py  routes.py
backend/api/clients/: model_client.py
backend/api/graphs/: agent.py  nodes.py  orchestrator.py  runner.py
backend/api/services/models/: base.py  ollama.py
backend/api/utils/: auth.py
backend/data/: maestro_componentes.csv  maestro_componentes.json
backend/prompts/: graph_dual_coder_v1.txt  graph_dual_manager_v1.txt  graph_monolith_LLM.txt  graph_monolith_gemini.txt  graph_monolith_mistral.txt  graph_monolith_v1.txt  graph_monolith_v2.txt
backend/src/my_langgraph/: agent.py  graph.py
backend/src/my_langgraph/graphs/: graph_dual.py  graph_dual_v0.py  graph_monolith.py
backend/src/my_langgraph/utils/: models.py  nodes.py  state.py  tools.py  utils.py
backend/tests/: test_api.py
evaluation/: analisis.ipynb  evaluacion.xlsx
frontend/: Dockerfile  package-lock.json  package.json
frontend/frontend/: package-lock.json  package.json
frontend/ui-budget/: .dockerignore  Dockerfile  package-lock.json  package.json
langgraph/: Dockerfile  langgraph.json  pyproject.toml
langgraph/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
langgraph/src/my_app/: agent.py
langgraph/src/my_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
langgraph/src/my_app/utils/: nodes.py  tools.py
models/: Dockerfile  entrypoint.sh
models/ollama/: id_ed25519  id_ed25519.pub
ops/: docker-compose-langgraph.yml  docker-compose.dev.yml
