[project]
name = "my-app"
version = "0.1.0"
description = "Proyecto de ejemplo con LangGraph + Ollama"
requires-python = ">=3.8"
dependencies = [
    # **Core de LangGraph**
    "langgraph (>=0.4.1,<0.6.0)",

    # **APIs de alto nivel para agentes React-style**
    "langgraph-prebuilt (>=0.1.8,<0.2.0)",

    # **LangChain base y extensiones**
    "langchain-core (>=0.3.0,<1.0.0)",
    "langchain-community (>=0.3.21,<1.0.0)",
    "langchain-experimental (>=0.2.17,<1.0.0)",
    "langchain-ollama (>=0.3.0,<1.0.0)",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.71",
    "pytest>=8.3.5",
]

[tool.setuptools.packages.find]
where = ["src"]